# slave-spin

./: .gitignore  .pre-commit-config.yaml  AF_Bethe_single band .py  CITATION.cff  LICENSE  PARA_Bethe_single_band.py  README.md  pyproject.toml
.github/workflows/: actions.yml
docs/: index.md
examples/: PLACEHOLDER.md  bethe_2orbital_af.yaml  bethe_2orbital_para.yaml
scripts/legacy/: 2_orbitals_AF_bethe_J=U_p=0.py  Para_bethe_2orbitals_J=U_p=0.py
src/pyssmf/: __init__.py  config.py  runner.py
tests/: test_runner.py
